-
Bug
-
Resolution: Fixed
-
P3
-
openjdk8u292, 11, 15
-
b28
-
aarch64
-
linux
Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8247513 | 16 | Vladimir Kozlov | P3 | Resolved | Fixed | b02 |
JDK-8249434 | 15.0.1 | Unassigned | P3 | Resolved | Fixed | b01 |
JDK-8247857 | 11.0.9-oracle | Vladimir Kozlov | P3 | Resolved | Fixed | b01 |
JDK-8248471 | 11.0.9 | Vladimir Kozlov | P3 | Resolved | Fixed | b01 |
JDK-8265179 | openjdk8u302 | Vladimir Kozlov | P3 | Resolved | Fixed | b01 |
JDK-8310223 | 8u391 | Ivan Bereziuk | P3 | Resolved | Fixed | b01 |
open/test/hotspot/jtreg/runtime/CheckUnhandledOops/TestVerifyOops.java
111 decodeHeapOop === _ 112 [[ 84 79 125 ]] java/util/Set * Interface:java/util/Set * !jvms: SystemModuleFinders$SystemModuleFinder::<init> @ bci:9
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/output.cpp:1619
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/63712a43-4eaa-429c-95b4-483ac8241123-S591/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/c97bbec7-c899-4fef-b9a5-bb5bb62cfb9a/runs/319b692b-aa79-47eb-803b-0023af859d26/workspace/open/src/hotspot/share/opto/output.cpp:1619), pid=20856, tid=20870
# assert(false) failed: wrong size of mach node
#
# JRE version: Java(TM) SE Runtime Environment (15.0) (fastdebug build 15-internal+0-2020-06-10-0855415.patric.hedlin.jdk)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 15-internal+0-2020-06-10-0855415.patric.hedlin.jdk, compiled mode, compressed oops, g1 gc, linux-aarch64)
# Problematic frame:
# V [libjvm.so+0x1144408] PhaseOutput::fill_buffer(CodeBuffer*, unsigned int*)+0x1c08
#
# Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /scratch/opt/mach5/mesos/work_dir/slaves/805146e6-8fdb-4552-bf9e-385b73cf7129-S17240/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/193e279b-d8eb-44f8-b5c7-150915d4dc72/runs/4008e03f-0ede-4b61-bbf3-9b905db60f26/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_runtime/scratch/0/core.20856)
#
# An error report file with more information is saved as:
# /scratch/opt/mach5/mesos/work_dir/slaves/805146e6-8fdb-4552-bf9e-385b73cf7129-S17240/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/193e279b-d8eb-44f8-b5c7-150915d4dc72/runs/4008e03f-0ede-4b61-bbf3-9b905db60f26/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_runtime/scratch/0/hs_err_pid20856.log
#
# Compiler replay data is saved as:
# /scratch/opt/mach5/mesos/work_dir/slaves/805146e6-8fdb-4552-bf9e-385b73cf7129-S17240/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/193e279b-d8eb-44f8-b5c7-150915d4dc72/runs/4008e03f-0ede-4b61-bbf3-9b905db60f26/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_runtime/scratch/0/replay_pid20856.log
#
111 decodeHeapOop === _ 112 [[ 84 79 125 ]] java/util/Set * Interface:java/util/Set * !jvms: SystemModuleFinders$SystemModuleFinder::<init> @ bci:9
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/output.cpp:1619
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/63712a43-4eaa-429c-95b4-483ac8241123-S591/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/c97bbec7-c899-4fef-b9a5-bb5bb62cfb9a/runs/319b692b-aa79-47eb-803b-0023af859d26/workspace/open/src/hotspot/share/opto/output.cpp:1619), pid=20856, tid=20870
# assert(false) failed: wrong size of mach node
#
# JRE version: Java(TM) SE Runtime Environment (15.0) (fastdebug build 15-internal+0-2020-06-10-0855415.patric.hedlin.jdk)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 15-internal+0-2020-06-10-0855415.patric.hedlin.jdk, compiled mode, compressed oops, g1 gc, linux-aarch64)
# Problematic frame:
# V [libjvm.so+0x1144408] PhaseOutput::fill_buffer(CodeBuffer*, unsigned int*)+0x1c08
#
# Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /scratch/opt/mach5/mesos/work_dir/slaves/805146e6-8fdb-4552-bf9e-385b73cf7129-S17240/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/193e279b-d8eb-44f8-b5c7-150915d4dc72/runs/4008e03f-0ede-4b61-bbf3-9b905db60f26/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_runtime/scratch/0/core.20856)
#
# An error report file with more information is saved as:
# /scratch/opt/mach5/mesos/work_dir/slaves/805146e6-8fdb-4552-bf9e-385b73cf7129-S17240/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/193e279b-d8eb-44f8-b5c7-150915d4dc72/runs/4008e03f-0ede-4b61-bbf3-9b905db60f26/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_runtime/scratch/0/hs_err_pid20856.log
#
# Compiler replay data is saved as:
# /scratch/opt/mach5/mesos/work_dir/slaves/805146e6-8fdb-4552-bf9e-385b73cf7129-S17240/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/193e279b-d8eb-44f8-b5c7-150915d4dc72/runs/4008e03f-0ede-4b61-bbf3-9b905db60f26/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_runtime/scratch/0/replay_pid20856.log
#
- backported by
-
JDK-8247513 [aarch64] assert(false) failed: wrong size of mach node
-
- Resolved
-
-
JDK-8247857 [aarch64] assert(false) failed: wrong size of mach node
-
- Resolved
-
-
JDK-8248471 [aarch64] assert(false) failed: wrong size of mach node
-
- Resolved
-
-
JDK-8249434 [aarch64] assert(false) failed: wrong size of mach node
-
- Resolved
-
-
JDK-8265179 [aarch64] assert(false) failed: wrong size of mach node
-
- Resolved
-
-
JDK-8310223 [aarch64] assert(false) failed: wrong size of mach node
-
- Resolved
-
(1 backported by)