8247350: [aarch64] assert(false) failed: wrong size of mach node

Use movptr() to load address of string

Reviewed-by: adinn, azeemj, aph